--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Outfit:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <title>Otisium</title>
+    <title>ReText</title>
     <meta name="description" content="Landing page components built with React, Shadcn/ui and Tailwind that will make your website feel premium." />
   </head>
   <body class="bg-background antialiased">
